sample/retrieveUnpackaged/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>IOTA Leads Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CFL__Test_Date_Time__c</fullName>
        <label>Test Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CFL__Test_Date__c</fullName>
        <label>Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Migration_Id__c</fullName>
        <description>Contains the Id from the system the record was migrated from</description>
        <externalId>true</externalId>
        <label>Legacy Migration Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAM__Lead_Score_Rating__c</fullName>
        <formula>IF(PAM__Lead_Score__c  &gt;  10000,   &quot;Rating 1&quot;,
IF(PAM__Lead_Score__c  &gt;  8000,     &quot;Rating 2&quot;,
IF(PAM__Lead_Score__c  &gt;  4000,     &quot;Rating 3&quot;,
IF(PAM__Lead_Score__c  &gt;  1000,     &quot;Rating 4&quot;,
IF(PAM__Lead_Score__c  &gt;  1,           &quot;Rating 5&quot;,
&quot;None&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Score Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAM__Lead_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Lead score based on online activity such as email opens and web visits.</description>
        <inlineHelpText>Lead score based on online activity such as email opens and web visits.</inlineHelpText>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>experianqas__Updated_Touchpoints_Timestamp__c</fullName>
        <label>Updated Touchpoints Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>experianqas__Updated_Touchpoints__c</fullName>
        <label>Updated Touchpoints</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>IOTA_Lead</fullName>
        <active>true</active>
        <businessProcess>IOTA Leads Process</businessProcess>
        <label>IOTA Lead</label>
    </recordTypes>
</CustomObject>